# Prova1

./: .clang-format  CMakeLists.txt  HistogramsFile.root  Main.cpp  Main_cpp.d  Main_cpp_ACLiC_dict_rdict.pcm  README.md  extra.cpp  main.cpp  main_cpp.d  main_cpp_ACLiC_dict_rdict.pcm  particle.cpp  particle.hpp  particle_cpp.d  particle_cpp_ACLiC_dict_rdict.pcm  particletype.cpp  particletype.hpp  particletype_cpp.d  particletype_cpp_ACLiC_dict_rdict.pcm  read.cpp  read_cpp.d  read_cpp_ACLiC_dict_rdict.pcm  resonancetype.cpp  resonancetype.hpp  resonancetype_cpp.d  resonancetype_cpp_ACLiC_dict_rdict.pcm  rootlogon.C
test/: particle.test.cpp  particletype.test.cpp  resonancetype.test.cpp
